--- a/MICHELOB-TABLET/style.css
+++ b/MICHELOB-TABLET/style.css
@@ -16,7 +16,7 @@ body {
     background: -o-linear-gradient(-135deg, #4158d0, #1f214b);
     background: -moz-linear-gradient(-135deg, #4158d0, #1f214b);
     background: linear-gradient(-135deg, #4158d0, #1f214b);
-    width: 100vh;
+    width: 100%;
 }
 
 .part1 {
